--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,5 +6,5 @@ sql:
     gen:
       go:
         package: "domain"
-        out: "domain"
+        out: "generated/domain"
         sql_package: "pgx/v5"
